feat: updated api
