# src/common/dataModels/records.ts
@@ -1,48 +1,17 @@
+import { IRasterCatalogUpsertRequestBody } from '@map-colonies/mc-model-types';
+
 //requests
-import { OperationStatus } from './enums';
-
-export interface IRecordsParams {
-  recordId: string;
-}
-export interface IFindRecordsRequest {
-  resourceId?: string;
-  version?: string;
-  isCleaned?: boolean;
-  status?: OperationStatus;
-  type?: string;
+export interface IRecordRequestParams {
+  id: string;
 }
 
-export interface ICreateRecordBody {
-  resourceId: string;
-  version: string;
-  parameters: Record<string, unknown>;
-  type: string;
-  description?: string;
-  status?: OperationStatus;
-  reason?: string;
-}
-
-export interface IUpdateRecordBody {
-  parameters?: Record<string, unknown>;
-  status?: OperationStatus;
-  percentage?: number;
-  reason?: string;
-  isCleaned?: boolean;
-}
-
-export interface IUpdateRecordRequest extends IRecordsParams, IUpdateRecordBody {}
+export interface IUpdateRecordRequest extends IRasterCatalogUpsertRequestBody, IRecordRequestParams {}
 
 //responses
-export type FindRecordsResponse = IGetRecordResponse[];
-
-export interface IGetRecordResponse {
+export interface IRecordIdResponse {
   id: string;
-  resourceId?: string;
-  version?: string;
-  // TODO: add response values
 }
 
-export interface ICreateRecordResponse {
-  id: string;
-  taskIds: string[];
+export interface IRecordExistsResponse {
+  exists: boolean;
 }
